fix(toolbar): [LED-2186] Add new var for toolbar items positioning - fix toolbar items alignment for >=tablet widths

--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -10,8 +10,9 @@ $toolbar_font-size: 1.2rem !default;
 $toolbar_font-weight: inherit !default;
 $toolbar_text-transform: uppercase !default;
 
-$toolbar_elements-padding-tablet-up: 0 0 0 0 !default;
+$toolbar_elements-padding-tablet-up: 0 !default;
 $toolbar_elements-margin: 0 0 1.5rem !default;
+$toolbar_elements-margin-tablet-up: 0 !default;
 
 $toolbar_select-min-height: 3.5rem !default;
 $toolbar_input-max-height: $toolbar_select-min-height !default;
@@ -53,6 +54,7 @@ $toolbar_pagination-align: right !default;
         margin: $toolbar_elements-margin;
 
         @include media('>=tablet') {
+            margin: $toolbar_elements-margin-tablet-up;
             padding: $toolbar_elements-padding-tablet-up;
 
             &:first-child {
